add save file function
define new class "Constants" to define any static const numbers/strings
save input data to rename file

--- a/AccountBook.csproj
+++ b/AccountBook.csproj
@@ -53,6 +53,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CategoryDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Constants.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
